<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="10dp"
        android:text="@string/title" />

    <EditText
        android:id="@+id/editassetno"
        android:layout_width="164dp"
        android:layout_height="40dp"
        android:layout_x="127dp"
        android:layout_y="39dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="33dp"
        android:layout_y="83dp"
        android:text="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="33dp"
        android:layout_y="50dp"
        android:text="@string/marks" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_x="37dp"
        android:layout_y="113dp"
        android:text="@string/date_purch" />

    <EditText
        android:id="@+id/loctxt"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_x="127dp"
        android:layout_y="142dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="38dp"
        android:layout_y="154dp"
        android:text="@string/location" />

    <EditText
        android:id="@+id/dtpurchtxt"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_x="127dp"
        android:layout_y="109dp"
        android:ems="10"
        android:inputType="number|datetime" />

    <EditText
        android:id="@+id/owntxt"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_x="127dp"
        android:layout_y="176dp"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="38dp"
        android:layout_y="188dp"
        android:text="@string/owner" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="38dp"
        android:layout_y="225dp"
        android:text="@string/depre" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="162dp"
        android:layout_height="40dp"
        android:layout_x="127dp"
        android:layout_y="74dp"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <EditText
        android:id="@+id/deptxt"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_x="127dp"
        android:layout_y="211dp"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <EditText
        android:id="@+id/pvaltxt"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_x="127dp"
        android:layout_y="246dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="8dp"
        android:layout_y="262dp"
        android:text="@string/purch_val" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="192dp"
        android:layout_y="354dp"
        android:text="@string/view" />

    <Button
        android:id="@+id/btnShowInfo"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="192dp"
        android:layout_y="404dp"
        android:text="@string/show_info" />

    <Button
        android:id="@+id/btnModify"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="56dp"
        android:layout_y="354dp"
        android:text="@string/modify" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="56dp"
        android:layout_y="304dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnViewAll"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="56dp"
        android:layout_y="404dp"
        android:text="@string/view_all" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_x="191dp"
        android:layout_y="304dp"
        android:text="@string/delete" />

</AbsoluteLayout>